Correct broken styles for Landing header

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,5 +1,5 @@
-header {
-  height: 13vh;
+.header-wrapper {
+  height: 15vh;
   text-align: justify;
 }
 
